--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,27 @@ body {
     color: #fff;
     margin: 0;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+}
+
+.lists {
+    margin-top: -10%;
+}
+
+footer {
+    margin: 30px 0;
+    text-align: center;
+}
+
+.loading {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    background-color: #000;
+    display: flex;  
+    justify-content: center;
+    align-items: center;
 }
